--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 style="color: #4CAF50; text-decoration: none;">github.com/elidrissilaoukili</a>
         </p>
         <p style="margin: 5px 0; font-size: 14px;">
-            <a href="https://elidrissilaoukili.netlify.app" target="_blank"
-                style="color: #4CAF50; text-decoration: none;">elidrissilaoukili.netlify.app</a>
+            <a href="https://elidrissilaoukili.github.io" target="_blank"
+                style="color: #4CAF50; text-decoration: none;">elidrissilaoukili.github.io/</a>
         </p>
         <p style="margin: 5px 0; font-size: 14px;">
             <a href="mailto:elidrissilaoukili@gmail.com"
