--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="./webfiles/database.html">database</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="./webfiles/docs/timetabling.pdf">Article</a></li>
+                <li><a href="#contact" class="disabled-link">Report</a></li>
             </ul>
         </nav>
     </header>
