--- a/webfiles/database.html
+++ b/webfiles/database.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="#">database</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="./docs/timetabling.pdf">Article</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
