--- a/webfiles/database.html
+++ b/webfiles/database.html
@@ -24,7 +24,7 @@
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="#">database</a></li>
                 <li><a href="./docs/timetabling.pdf">Article</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="disabled-link">Report</a></li>
             </ul>
         </nav>
     </header>
