--- a/webfiles/database.html
+++ b/webfiles/database.html
@@ -44,6 +44,8 @@
                             target="_blank">db_timetable-full.sql</a></li>
                     <li>- <a href="https://github.com/elidrissilaoukili/timetabling/blob/main/data/db_timetable.sql"
                             target="_blank">db_timetable.sql</a></li>
+                    <li>- <a href="https://github.com/elidrissilaoukili/timetabling/blob/main/data/selection_queries.sql"
+                            target="_blank">selection_queries.sql</a></li>
                 </ul>
             </nav>
         </aside>
