--- a/webfiles/database.html
+++ b/webfiles/database.html
@@ -23,8 +23,9 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="#">database</a></li>
-                <li><a href="./docs/timetabling.pdf">Article</a></li>
-                <li><a href="#contact" class="disabled-link">Report</a></li>
+                <li><a href="./docs/timetabling-article.pdf">Article</a></li>
+                <!-- class="disabled-link" -->
+                <li><a href="./docs/timetabling-repot.pdf">Report</a></li>
             </ul>
         </nav>
     </header>
