--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="./webfiles/database.html">database</a></li>
-                <li><a href="./webfiles/docs/timetabling.pdf">Article</a></li>
-                <li><a href="#contact" class="disabled-link">Report</a></li>
+                <li><a href="./webfiles/docs/timetabling-article.pdf">Article</a></li>
+                <!-- class="disabled-link" -->
+                <li><a href="./webfiles/docs/timetabling-repot.pdf">Report</a></li>
             </ul>
         </nav>
     </header>
