add report preview

--- a/webfiles/database.html
+++ b/webfiles/database.html
@@ -23,9 +23,9 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="#">database</a></li>
-                <li><a href="./docs/timetabling-article.pdf">Article</a></li>
+                <li><a href="./docs/timetabling-article.pdf" target="_blank">Article</a></li>
                 <!-- class="disabled-link" -->
-                <li><a href="./docs/timetabling-repot.pdf">Report</a></li>
+                <li><a href="./docs/timetabling-report-preview.pdf" target="_blank">Report</a></li>
             </ul>
         </nav>
     </header>
@@ -65,11 +65,11 @@
                     <h1>3- Database diagram for a complete system</h1>
                     <h2><a href="https://dbdiagram.io/d/school-67790d0a5406798ef74210de" target="_blank">show data
                             online</a></h2>
-
                     <img src="./images/timetabling-full.png" alt="">
+                    <br>
+                    <h1>4- Data example after fetching </h1>
+                    <img src="./images/data_fetching_example.png" alt="">
                 </div>
-
-
             </section>
         </div>
     </main>
