--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <ul>
                 <li><a href="https://elidrissilaoukili.github.io/timetabling/">classes & functions</a></li>
                 <li><a href="./webfiles/database.html">database</a></li>
-                <li><a href="./webfiles/docs/timetabling-article.pdf">Article</a></li>
+                <li><a href="./webfiles/docs/timetabling-article.pdf" target="_blank">Article</a></li>
                 <!-- class="disabled-link" -->
-                <li><a href="./webfiles/docs/timetabling-repot.pdf">Report</a></li>
+                <li><a href="./webfiles/docs/timetabling-report-preview.pdf" target="_blank">Report</a></li>
             </ul>
         </nav>
     </header>
